블로그수정

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,5 +32,6 @@
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
     <script src="{{ script | relative_url }}"></script>
+    <a href="/search/"><img src="/images/icon/search.png" /></a>
   {% endfor %}
 {% endif %}
