검색기능 수정

--- a/_includes/search/search_form.html
+++ b/_includes/search/search_form.html
@@ -23,4 +23,6 @@
   <div class="search-searchbar"></div>
   <div class="search-hits"></div>
   {%- endcase -%}
+  
+  <a href="/search/"><img src="/assets/images/icon/search.png"/></a>
 </div>
